--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
 	<head>
 		<title>Web Tutorial</title>
     	<meta charset="UTF-8">
+        <style>
+            body{
+                background-color: red;
+            }
+        </style>
   </head>
   <body>
     <header>
@@ -12,6 +17,9 @@
     <div id="content">
     	<p> Some sort of text that fills this space.
     	</p>
+        <a href="about/">
+            About
+        </a>
     </div>
     
   </body>
