--- a/about/index.html
+++ b/about/index.html
@@ -9,17 +9,14 @@ and open the template in the editor.
         <title> About </title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <style>
-            .header{
-                font-size: 40px;
-            }
-        </style>
+        <link href="../stylesheets/stylesheet1.css" rel="stylesheet" type="text/css">
+        
     </head>
     <body>
     <header class="header">
         This is a header.
     </header>
         
-        <div>TODO write content</div>
+        <div class="content">TODO write content</div>
     </body>
 </html>
